[tool.poetry]
name = "botcontroller"
version = "0.1.0"
description = ""
authors = ["Leo Johnston <67394753+Daftscientist@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "discord"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
