[tool.poetry]
name = "botcontroller"
version = "0.1.0"
description = "BotController is a versatile command and event handling framework for Discord bots built on-top-of Discord.py."
authors = ["Leo Johnston contact@leojohnston.tech"]
readme = "README.md"
packages = [{include = "discord"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
